Fix(?) for scrolling in Safari on iOS

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,11 @@
-/* Styling */
+/* STYLING */
 /* color: #59EA59; */
 /* font-family: 'VT323', monospace; */
 
 /* GENERAL */
 body {
   min-height: 100vh;
+  min-height: -webkit-fill-available;
   font-family: 'VT323', monospace;
   color: #000;
   background-color: #fff;
@@ -52,6 +53,7 @@ nav ul {
   flex-direction: column;
   background: #000;
   border-bottom: 1px solid #59EA59;
+  list-style-type: none;
   line-height: 1.5;
   font-size: 0;
   transition: 1s;
@@ -105,39 +107,33 @@ ul.container.burger-open {
 canvas {
   margin: 1.25% auto 0;
   box-sizing: border-box;
-  width: 95%;
+  width: 95vw;
   max-width: 500px;
   height: calc(95vw * 0.75);
   max-height: 375px;
   display: block;
-  border: 2px solid black;
+  border: 2px solid #000;
 }
 
-/* QUIZ - QUESTION */
-#question {
+/* QUIZ - QUESTIONS & ANSWERS */
+#question, .answer {
   box-sizing: border-box;
   margin: auto;
   padding: .25rem .5rem;
   width: 95%;
   max-width: 600px;
-  border: 1px solid black;
+  border: 1px solid #000;
   font-size: 1rem;
-  font-weight: bold;
-  visibility: hidden;
-}
-
-/* QUIZ - ANSWERS */
-.answer {
-  box-sizing: border-box;
-  margin: auto;
-  padding: .25rem .5rem;
-  width: 95%;
-  max-width: 600px;
-  border: 1px solid black;
   text-align: left;
-  font-size: 1rem;
-  cursor: pointer;
   visibility: hidden;
+}
+
+#question {
+  font-weight: bold;
+}
+
+.answer {
+  cursor: pointer;
 }
 
 /* MAIN CONTENT - INDEX & GAME COMPLETE PAGE */
@@ -235,9 +231,6 @@ footer {
     width: auto;
     padding: .5rem;
     font-size: 2em;
-    list-style-type: none;
-    background: #000;
-    color: #59EA59;
     flex-direction: row;
     justify-content: space-around;
   }
